--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/bboyle/countries-capitals-app/issues"
   },
-  "homepage": "https://github.com/bboyle/countries-capitals-app"
+  "homepage": "https://github.com/bboyle/countries-capitals-app",
+  "devDependencies": {
+    "gulp": "^3.8.7"
+  }
 }
