--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Thinkful challenge: code up an Angular app that allows users to search and visualize data about countries and capital cities.",
   "main": "app/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/bboyle/countries-capitals-app",
   "devDependencies": {
     "gulp": "^3.8.7",
-    "gulp-connect": "~2.0.6"
+    "gulp-connect": "~2.0.6",
+    "gulp-jshint": "~1.8.4"
   }
 }
