--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.21",
-    "angular-route": "~1.2.21"
+    "angular": "~1.2.23",
+    "angular-route": "~1.2.23",
+    "angular-animate": "~1.2.23"
   }
 }
