--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "angular": "~1.2.23",
     "angular-route": "~1.2.23",
-    "angular-animate": "~1.2.23"
+    "angular-animate": "~1.2.23",
+    "angular-leaflet": "~0.7.8"
   }
 }
