--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.2.23",
     "angular-route": "~1.2.23",
     "angular-animate": "~1.2.23",
-    "angular-leaflet": "~0.7.8"
+    "angular-leaflet": "~0.7.8",
+    "threejs": "*"
   }
 }
