--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "devDependencies": {
     "gulp": "^3.8.7",
     "gulp-connect": "~2.0.6",
-    "gulp-jshint": "~1.8.4"
+    "gulp-jshint": "~1.8.4",
+    "gulp-minify-css": "^0.3.8",
+    "gulp-minify-html": "^0.1.5",
+    "gulp-rev": "^1.1.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-usemin": "^0.3.8"
   }
 }
