--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "gulp-minify-html": "^0.1.5",
     "gulp-rev": "^1.1.0",
     "gulp-uglify": "^1.0.1",
-    "gulp-usemin": "^0.3.8"
+    "gulp-usemin": "^0.3.8",
+    "karma": "^0.12.23",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-ie-launcher": "^0.1.5",
+    "karma-jasmine": "^0.1.5"
   }
 }
